import { Stack } from 'expo-router';

export default () => <Stack screenOptions={{ headerShown: true, title: 'Admin' }} />;
